# Trimanga

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  detector.md  ocr-backends.md  release.md
include/scanlation_tool/: classifier.hpp  file_utils.hpp  image_features.hpp  ocr.hpp  process.hpp  scanner.hpp  types.hpp
include/trimanga/: classifier.hpp  detector.hpp  file_utils.hpp  image_features.hpp  image_loader.hpp  ocr.hpp  previewer.hpp  process.hpp  scanner.hpp  types.hpp
packaging/: README.md
packaging/chocolatey/: scanlation-tool.nuspec  trimanga.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: scanlation-tool.rb  trimanga.rb
packaging/linux/: README.md
packaging/scoop/: scanlation-tool.json  trimanga.json
packaging/winget/: ScanlationTool.installer.yaml  ScanlationTool.locale.en-US.yaml  ScanlationTool.yaml  Trimanga.installer.yaml  Trimanga.locale.en-US.yaml  Trimanga.yaml
src/: apple_vision_backend.mm  classifier.cpp  file_utils.cpp  image_features_macos.mm  image_features_stub.cpp  main.cpp  ocr.cpp  process.cpp  scanner.cpp  tesseract_backend.cpp  trimanga_ocr_backend.mm  trimanga_ocr_backend_stub.cpp
src/detectors/: scanlation_detector.cpp
src/image/: image_loader.cpp  page_features.cpp
src/preview/: preview_ipc.cpp  preview_ipc.hpp  previewer_spawn.cpp  previewer_stub.cpp  sdl_preview_main.cpp  sdl_previewer.cpp
src/preview/sdl/: drawing.cpp  layout.cpp  page_card.cpp  platform_window.cpp  platform_window_mac.mm  review_internal.hpp  texture_cache.cpp  widgets.cpp
tests/: archive_rewrite.cpp  smoke.sh
tools/: README.md  layout_probe.cpp
